<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttributesActivity">

    <TextView
        android:id="@+id/attributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attributions"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/attribute1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attributes"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/attribution_monkey_picture"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/attribute2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attribute1"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/attribution_monkey_accessories"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/attribute3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attribute2"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/attribution_sound_effects"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:onClick="backButtonClicked"
        android:text="@string/main_menu"/>

</android.support.constraint.ConstraintLayout>